[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sufof"
dynamic = ["version"]
description = "wip"
readme = { file = "README.md", content-type = "text/markdown" }
license = "Apache-2.0"
authors = [{ name = "ebonnal", email = "bonnal.enzo.dev@gmail.com" }]
urls = { Homepage = "https://github.com/ebonnal/sufof" }
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.dynamic]
version = { attr = "sufof.__version__" }

[tool.setuptools]
packages = ["sufof"]
